# abilian-sbe-monorepo

./: .cirrus.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  Procfile  Procfile.dev  README.md  REUSE.toml  TODO.md  app.json  cliff.toml  conftest.py  dev_start.sh  dot_env.example  mkdocs.yml  nixpacks.toml  noxfile.py  package.json  pre_start.sh  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py  tox.ini  wsgi.py
.builds/: alpine.yml  alpine.yml-fail  rockylinux.yml  ubuntu-2204.yml  ubuntu-2404.yml  ubuntu-lts.yml
.circleci/: config.yml
.github/workflows/: ci.yml
cloud/docker/: run.py
cloud/nua/: nua-config.toml
cloud/slapos/abilian-sbe/: buildout.hash.cfg  clamd.conf.j2  instance-sbe.cfg.in  instance.cfg.in  software.cfg  versions.cfg
cloud/vagrant/: Vagrantfile
containers/docker/: Dockerfile
containers/slapos/abilian-sbe/: buildout.hash.cfg  instance.cfg.in
docker/: docker-compose.yml
docs/: contributing.md  development.md  governance.md  index.md  installation.md  requirements.txt  roadmap.md
example_config/: dot_env  sbe.example.com  steps.md
migrations/: alembic.ini  env.py  script.py.mako
migrations/versions/: 1f4631da751b_.py  946bada3d9d5_.py
notes/adrs/: 00-readme.md  001-oidc.md  002-scim.md  003-rbac.md  004-permissions.md  005-storage.md  006-front-end.md  007-search.md  008-plugin-system.md  009-postgresql.md  010-mariadb.md  011-sqlite.md
slapos/: check_requirements.sh  diff_104.txt  diff_105.txt  diff_reqs_soft_vers.py  last_diff_of_versions.txt  orig_sbe_requirements.txt  pip_requirements.txt  poetry_requitements.sh  poetry_versions_to_slapos.sh  reqs_diff_for_1.0.15.txt  requirements.txt  requirements_104.txt  requirements_105.txt  requirements_main20231002.txt  software.cfg  software_104.cfg  software_105.cfg
slapos/slapos_config/abilian-sbe/: buildout.hash.cfg  freshclam.conf.j2  instance-sbe.cfg.in  instance.cfg.in  sendmail-8.17.2_milter.patch  sendmail-8.17.2_shared.patch  site.config.m4  software.cfg  versions.cfg
slapos/slapos_config/clamav/: buildout.cfg
slapos/slapos_config/libcheck/: buildout.cfg
slapos/slapos_config/libmilter/: buildout.cfg  site.config.m4
src/abilian/: app.py  backports.py  config.py  extensions.py  i18n.py  mixins.py  wsgi.py
src/abilian/basic_server/: forker.py  utils.py  wrapper.py
src/abilian/cli/: __init__.py  base.py  config.py  indexing.py
src/abilian/core/: celery.py  entities.py  logger_patch.py  logging.py  plugin_manager.py  service_manager.py  signals.py  singleton.py  sqlalchemy.py  util.py
src/abilian/core/dramatiq/: cli.py  scheduler.py  setup.py  singleton.py
src/abilian/core/extensions/: __init__.py  csrf.py  jinjaext.py  login.py  mail.py  redis.py  sqlalchemy.py  upstream_info.py
src/abilian/core/models/: __init__.py  attachment.py  base.py  base_mixin.py  blob.py  comment.py  owned.py  subjects.py  tag.py
src/abilian/core/sqlalchemy/: __init__.py  extension.py  listeners.py  sqlalchemy.py  types.py
src/abilian/core/tests/: test_entities.py  test_utils.py
src/abilian/lib/: __init__.py  scanner.py
src/abilian/logutils/: config.py  configure.py  log_server.py
src/abilian/sbe/: app.py  boot.py  extension.py
src/abilian/sbe/dramatiq/: __init__.py  cli.py  job.py  lazy_actor.py  middleware.py  scheduler.py  setup.py
src/abilian/services/: __init__.py  base.py
src/abilian/services/activity/: __init__.py  models.py  service.py  tests.py
src/abilian/services/antivirus/: __init__.py  service.py
src/abilian/services/audit/: __init__.py  models.py  service.py  tests.py
src/abilian/services/auth/: __init__.py  models.py  service.py  tests.py  views.py
src/abilian/services/blob_store/: __init__.py  service.py  test_repository.py  test_session_repository.py
src/abilian/services/conversion/: __init__.py  cache.py  exceptions.py  handler_lock.py  handlers.py  service.py  tests.py  util.py
src/abilian/services/image/: __init__.py
src/abilian/services/indexing/: __init__.py  adapter.py  debug_toolbar.py  schema.py  service.py
src/abilian/services/preferences/: __init__.py  models.py  panel.py  service.py  tests.py
src/abilian/services/repository/: service.py
src/abilian/services/security/: __init__.py  debug_toolbar.py  models.py  service.py  tests.py
src/abilian/services/settings/: __init__.py  models.py  service.py  tests.py
src/abilian/services/viewtracker/: __init__.py  (+2 more)
src/abilian/setup/: ____setup.py  __init__.py  blueprints.py  debug.py  extensions.py  logging.py  main.py  nav.py  services.py  setup.py
src/abilian/testing/: conftest.py  fixtures.py  util.py  validation.py
src/abilian/web/: __init__.py  access_blueprint.py  action.py  blueprints.py  crm_frontend.py  csrf.py  errors.py  filters.py  frontend.py  hooks.py  http.py  jinja.py  nav.py  util.py
src/extranet/: app.py  celery_app.py  config.py  wsgi.py
tailwind/: README.md  package-lock.json  package.json  postcss.config.js  tailwind.config.js
tailwind/src/: styles.css
tests/: conftest.py  test_archi.py  test_integration.py  util.py  validation.py
tests/core/: conftest.py  dummy.py  test_entities.py  test_permissions.py  test_sa_extensions.py  test_singleton.py  test_utils.py
tests/core/models/: test_blob.py  test_comment.py  test_subject.py
tests/integration/: conftest.py  test_db_check.py  test_integration.py  test_public_endpoints_with_no_login.py
tests/services/: test_ auth.py  test_activity.py  test_audit.py  test_auth.py  test_preferences.py  test_security.py  test_settings.py  test_vocabularies.py
tests/services/blob_store/: test_blob_repository.py  test_blob_session_repository.py
tests/services/conversion/: test_conversion.py
tests/services/image/: test_image.py
tests/services/indexing/: test_adapter.py  test_schema.py  test_service.py
tests/web/: test_actions.py  test_admin_views.py  test_filters.py  test_forms.py  test_icons.py  test_ip_country_code.py  test_login.py  test_validators.py  test_views_registry.py  test_widgets.py
tests/web/preferences/: test_user_preferences.py
(+210 files in other folders)
